navbar, manange-emp,view-all-employee complete

--- a/emp-app/src/app/page/admin-signin/admin-signin.component.html
+++ b/emp-app/src/app/page/admin-signin/admin-signin.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container mt-5">
     <div class="card bg-secondary shadow-lg">
 
@@ -6,8 +8,6 @@
         </div>
 
         <div class="card-body bg-light">
-
-            <form action="http://localhost:8081/emp-controller/admin-signin" method="POST">
 
                 <div class="row mb-3">
                     <div class="col-6">
@@ -76,7 +76,6 @@
                     </div>
                 </div>
 
-            </form>
         </div>
 
     </div>
