--- a/emp-app/src/app/page/manage-emp/manage-emp.component.html
+++ b/emp-app/src/app/page/manage-emp/manage-emp.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container m-5">
 
     <h1 class="text-center mb-4 bg-info p-4 text-white fw-bolder">Add Employee</h1>
@@ -15,19 +17,34 @@
     </div>
 
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Department" [(ngModel)]="employeeObj.Department" aria-label="Recipient's username" 
-            aria-describedby="basic-addon2">
-        <span class="input-group-text" id="basic-addon2">.com</span>
+        <select class="form-select" aria-label="Default select example" id="Department" [(ngModel)]="employeeObj.Department">
+            <option selected disabled>Role</option>
+            <option value="Hr">HR</option>
+            <option value="IT">IT</option>
+            <option value="Finance">Finance</option>
+            <option value="Operations">Operations</option>
+        </select>
     </div>
 
     <div class="input-group mb-3">
-        <select class="form-select" aria-label="Default select example" id="Department" [(ngModel)]="employeeObj.Department">
+        <select class="form-select" aria-label="Default select example" [(ngModel)]="employeeObj.CreatedAt">
             <option selected disabled>Role</option>
-            <option value="admin">HR</option>
-            <option value="manager">IT</option>
-            <option value="hr">HR</option>
-            <option value="developer">Fiance</option>
-            <option value="designer">Operations</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+        </select>
+    </div>
+
+    <div class="input-group mb-3">
+        <select class="form-select" aria-label="Default select example" [(ngModel)]="employeeObj.UpdatedAt">
+            <option selected disabled>Role</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
+            <option value="2024-04-25">2024-04-25</option>
         </select>
     </div>
 
