--- a/emp-app/src/app/page/view-all-employeee/view-all-employeee.component.html
+++ b/emp-app/src/app/page/view-all-employeee/view-all-employeee.component.html
@@ -1,1 +1,79 @@
-<p>view-all-employeee works!</p>
+<app-navbar></app-navbar>
+
+<h1 class="text-center mb-5 bg-info p-4 text-white fw-bolder">View All Employee</h1>
+
+<div class="container">
+    <table class="table boarder">
+        <tr class="boarder text-center bg-black text-white">
+            <th>Count</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Department</th>
+            <th>CreatedAt</th>
+            <th>UpdatedAt</th>
+            <th></th>
+        </tr>
+        <tr class="border text-center" *ngFor="let employee of employeeList; index as i">
+            <td>{{i+1}}</td>
+            <td>{{"EMP#000"+employee.id}}</td>
+            <td>{{employee.Name}}</td>
+            <td>{{employee.Email}}</td>
+            <td>{{employee.Department}}</td>
+            <td>{{employee.CreatedAt}}</td>
+            <td>{{employee.UpdatedAt}}</td>
+            <td><button claass="btn btn-danger" (click)="deleteEmployee(employee)"><i class="bi bi-trash3-fill"></i></button>
+            </td>
+            <td><button class="btn btn-success" (click)="updateEmployee(employee)" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <i class="bi bi-caret-right-fill"></i></button></td>
+        </tr>
+    </table>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">ID:</label>
+            <input type="text" class="form-control" id="recipient-name" [(ngModel)]="seleccteedEmployee.id" disabled>
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Name:</label>
+            <input type="text" class="form-control" id="recipient-name" [(ngModel)]="seleccteedEmployee.Name">
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Email:</label>
+            <input type="text" class="form-control" id="recipient-name" [(ngModel)]="seleccteedEmployee.Email">
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Department:</label>
+            <input type="text" class="form-control" id="recipient-name" [(ngModel)]="seleccteedEmployee.Department">
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">CreatedAt:</label>
+            <input type="text" class="form-control" id="recipient-name" [(ngModel)]="seleccteedEmployee.CreatedAt">
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">UpdatedAt:</label>
+            <input type="text" class="form-control" id="recipient-name" [(ngModel)]="seleccteedEmployee.UpdatedAt">
+          </div>
+          
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="saveUpdateEmployee()">Update</button>
+      </div>
+    </div>
+  </div>
+</div>
